--- a/apps/base/auth-phpldapadmin/deploy/deployment.yaml
+++ b/apps/base/auth-phpldapadmin/deploy/deployment.yaml
@@ -21,7 +21,7 @@ spec:
       containers:
       - name: phpldapadmin
         image: "registry.lan/phpldapadmin:7.3.33-apache-buster-1.2.6.6"
-        imagePullPolicy: Always
+        imagePullPolicy: IfNotPresent
         ports:
         - name: http
           containerPort: 8080
