--- a/apps/base/cluster-reloader/deploy/deployment.yaml
+++ b/apps/base/cluster-reloader/deploy/deployment.yaml
@@ -18,7 +18,7 @@ spec:
       containers:
       - name: reloader
         image: "registry.lan/reloader:v1.0.18"
-        imagePullPolicy: Always
+        imagePullPolicy: IfNotPresent
         securityContext:
           runAsNonRoot: true
           runAsUser: 1000
