--- a/apps/base/home-frigate/deploy/statefulSet.yaml
+++ b/apps/base/home-frigate/deploy/statefulSet.yaml
@@ -18,7 +18,7 @@ spec:
       initContainers:
       - name: create-folders
         image: "registry.lan/frigate-busybox:1.36.0"
-        imagePullPolicy: Always
+        imagePullPolicy: IfNotPresent
         command:
           - "sh"
           - "-c"
@@ -40,7 +40,7 @@ spec:
       containers:
       - name: frigate
         image: "registry.lan/frigate:0.11.1"
-        imagePullPolicy: Always
+        imagePullPolicy: IfNotPresent
         ports:
         - containerPort: 5000
           name: http
