--- a/apps/base/infra-kubernetes-dashboard/deploy/metrics-scraper/deployment.yaml
+++ b/apps/base/infra-kubernetes-dashboard/deploy/metrics-scraper/deployment.yaml
@@ -21,7 +21,7 @@ spec:
       containers:
         - name: dashboard-metrics-scraper
           image: "registry.lan/kubernetes-metrics-scraper:v1.0.6"
-          imagePullPolicy: Always
+          imagePullPolicy: IfNotPresent
           ports:
             - name: http
               containerPort: 8000
