--- a/apps/base/logging-fluentbit/deploy/daemonSet.yaml
+++ b/apps/base/logging-fluentbit/deploy/daemonSet.yaml
@@ -28,7 +28,7 @@ spec:
       containers:
       - name: fluent-bit
         image: "registry.lan/fluent-bit:2.0.9"
-        imagePullPolicy: Always
+        imagePullPolicy: IfNotPresent
         ports:
         - containerPort: 2020
           name: metrics
