--- a/apps/base/tool-syncthing/deploy/discovery/statefulSet.yaml
+++ b/apps/base/tool-syncthing/deploy/discovery/statefulSet.yaml
@@ -18,7 +18,7 @@ spec:
       initContainers:
       - name: create-folders
         image: "registry.lan/syncthing-busybox:1.36.0"
-        imagePullPolicy: Always
+        imagePullPolicy: IfNotPresent
         command:
           - "sh"
           - "-c"
