--- a/apps/base/cluster-intel-gpu-plugin/deploy/daemonSet.yaml
+++ b/apps/base/cluster-intel-gpu-plugin/deploy/daemonSet.yaml
@@ -20,7 +20,7 @@ spec:
       containers:
       - name: intel-gpu-plugin
         image: "registry.lan/intel-gpu-plugin:0.26.0"
-        imagePullPolicy: Always
+        imagePullPolicy: IfNotPresent
         env:
           - name: NODE_NAME
             valueFrom:
