--- a/apps/base/download-deluge/deploy/web/web-statefulSet.yaml
+++ b/apps/base/download-deluge/deploy/web/web-statefulSet.yaml
@@ -18,7 +18,7 @@ spec:
       initContainers:
       - name: create-folders
         image: "registry.lan/deluge-busybox:1.36.0"
-        imagePullPolicy: Always
+        imagePullPolicy: IfNotPresent
         command:
           - "sh"
           - "-c"
@@ -31,7 +31,7 @@ spec:
       containers:
       - name: deluge-web
         image: "registry.lan/deluge-web:2.1.1_1.2.14-alpine"
-        imagePullPolicy: Always
+        imagePullPolicy: IfNotPresent
         ports:
         - containerPort: 8112
           name: webui
