--- a/apps/base/download-sabnzbd/deploy/statefulSet.yaml
+++ b/apps/base/download-sabnzbd/deploy/statefulSet.yaml
@@ -18,7 +18,7 @@ spec:
       initContainers:
       - name: create-folders
         image: "registry.lan/sabnzbd-busybox:1.36.0"
-        imagePullPolicy: Always
+        imagePullPolicy: IfNotPresent
         command:
           - "sh"
           - "-c"
@@ -31,7 +31,7 @@ spec:
       containers:
       - name: sabnzbd
         image: "registry.lan/sabnzbd:3.7.2-3.11.2-slim-bullseye"
-        imagePullPolicy: Always
+        imagePullPolicy: IfNotPresent
         ports:
         - containerPort: 8080
           name: http
