--- a/apps/base/download-sickchill/deploy/statefulSet.yaml
+++ b/apps/base/download-sickchill/deploy/statefulSet.yaml
@@ -18,7 +18,7 @@ spec:
       initContainers:
       - name: create-folders
         image: "registry.lan/sickchill-busybox:1.36.0"
-        imagePullPolicy: Always
+        imagePullPolicy: IfNotPresent
         command:
           - "sh"
           - "-c"
@@ -31,7 +31,7 @@ spec:
       containers:
       - name: sickchill
         image: "registry.lan/sickchill:2023.1.2-3.11.2-slim-bullseye"
-        imagePullPolicy: Always
+        imagePullPolicy: IfNotPresent
         ports:
         - containerPort: 8081
           name: sickchill
