--- a/apps/base/home-esphome/deploy/statefulSet.yaml
+++ b/apps/base/home-esphome/deploy/statefulSet.yaml
@@ -20,7 +20,7 @@ spec:
       initContainers:
       - name: create-folders
         image: "registry.lan/esphome-busybox:1.36.0"
-        imagePullPolicy: Always
+        imagePullPolicy: IfNotPresent
         command:
           - "sh"
           - "-c"
@@ -33,7 +33,7 @@ spec:
       containers:
       - name: esphome
         image: "registry.lan/esphome:2023.3.2"
-        imagePullPolicy: Always        
+        imagePullPolicy: IfNotPresent        
         ports:
         - containerPort: 6052
           name: http
