--- a/apps/base/home-zwavejsui/deploy/statefulSet.yaml
+++ b/apps/base/home-zwavejsui/deploy/statefulSet.yaml
@@ -19,7 +19,7 @@ spec:
       initContainers:
       - name: create-folders
         image: "registry.lan/zwavejsui-busybox:1.36.0"
-        imagePullPolicy: Always
+        imagePullPolicy: IfNotPresent
         command:
           - "sh"
           - "-c"
@@ -37,7 +37,7 @@ spec:
       containers:
       - name: zwavejsui
         image: "registry.lan/zwave-js-ui:8.11.1"
-        imagePullPolicy: Always
+        imagePullPolicy: IfNotPresent
         envFrom:
         - secretRef:
             name: zwavejsui-env
