--- a/apps/base/infra-kubernetes-dashboard/deploy/dashboard/deployment.yaml
+++ b/apps/base/infra-kubernetes-dashboard/deploy/dashboard/deployment.yaml
@@ -21,7 +21,7 @@ spec:
       containers:
         - name: kubernetes-dashboard
           image: "registry.lan/kubernetes-dashboard:v2.7.0"
-          imagePullPolicy: Always
+          imagePullPolicy: IfNotPresent
           ports:
             - name: https
               containerPort: 8443
