--- a/apps/base/infra-ntfy/deploy/ntfy-alertmanager/deployment.yaml
+++ b/apps/base/infra-ntfy/deploy/ntfy-alertmanager/deployment.yaml
@@ -19,7 +19,7 @@ spec:
       containers:
       - name: ntfy-alertmanager
         image: "registry.lan/ntfy-alertmanager:0.2.0"
-        imagePullPolicy: Always
+        imagePullPolicy: IfNotPresent
         args: 
         - "--config"
         - "/etc/ntfy-alertmanager/config.scfg"
