--- a/apps/base/infra-zonemta/deploy/zonemta/deployment.yaml
+++ b/apps/base/infra-zonemta/deploy/zonemta/deployment.yaml
@@ -20,7 +20,7 @@ spec:
       initContainers:
       - name: wait-for-requirements
         image: "registry.lan/zonemta-busybox:1.36.0"
-        imagePullPolicy: Always
+        imagePullPolicy: IfNotPresent
         command: 
           - "sh"
           - "-c"
@@ -49,7 +49,7 @@ spec:
       containers:
       - name: zonemta
         image: "registry.lan/zonemta:3.5.1-node-19.8.1-alpine3.17"
-        imagePullPolicy: Always
+        imagePullPolicy: IfNotPresent
         env:
         - name: NODE_OPTIONS
           value: --max-old-space-size=32
