--- a/apps/base/monitoring-blackbox-exporter/deploy/deployment.yaml
+++ b/apps/base/monitoring-blackbox-exporter/deploy/deployment.yaml
@@ -85,7 +85,7 @@ spec:
         - --tls-cipher-suites=TLS_ECDHE_RSA_WITH_AES_128_GCM_SHA256,TLS_ECDHE_ECDSA_WITH_AES_128_GCM_SHA256,TLS_ECDHE_RSA_WITH_AES_256_GCM_SHA384,TLS_ECDHE_ECDSA_WITH_AES_256_GCM_SHA384,TLS_ECDHE_RSA_WITH_CHACHA20_POLY1305,TLS_ECDHE_ECDSA_WITH_CHACHA20_POLY1305
         - --upstream=http://127.0.0.1:19115/
         image: registry.lan/blackbox-exporter-kube-rbac-proxy:v0.14.0
-        imagePullPolicy: Always
+        imagePullPolicy: IfNotPresent
         name: kube-rbac-proxy
         ports:
         - containerPort: 9115
