--- a/apps/base/monitoring-kube-state-metrics/deploy/deployment.yaml
+++ b/apps/base/monitoring-kube-state-metrics/deploy/deployment.yaml
@@ -22,7 +22,7 @@ spec:
         - --telemetry-host=127.0.0.1
         - --telemetry-port=8082
         image: registry.lan/kube-state-metrics:v2.8.2
-        imagePullPolicy: Always
+        imagePullPolicy: IfNotPresent
         name: kube-state-metrics
         resources:
           limits:
@@ -47,7 +47,7 @@ spec:
         - --tls-cipher-suites=TLS_ECDHE_RSA_WITH_AES_128_GCM_SHA256,TLS_ECDHE_ECDSA_WITH_AES_128_GCM_SHA256,TLS_ECDHE_RSA_WITH_AES_256_GCM_SHA384,TLS_ECDHE_ECDSA_WITH_AES_256_GCM_SHA384,TLS_ECDHE_RSA_WITH_CHACHA20_POLY1305,TLS_ECDHE_ECDSA_WITH_CHACHA20_POLY1305
         - --upstream=http://127.0.0.1:8081/
         image: registry.lan/kube-state-metrics-kube-rbac-proxy:v0.14.0
-        imagePullPolicy: Always
+        imagePullPolicy: IfNotPresent
         name: kube-rbac-proxy-main
         ports:
         - containerPort: 8443
@@ -85,7 +85,7 @@ spec:
         - --tls-cipher-suites=TLS_ECDHE_RSA_WITH_AES_128_GCM_SHA256,TLS_ECDHE_ECDSA_WITH_AES_128_GCM_SHA256,TLS_ECDHE_RSA_WITH_AES_256_GCM_SHA384,TLS_ECDHE_ECDSA_WITH_AES_256_GCM_SHA384,TLS_ECDHE_RSA_WITH_CHACHA20_POLY1305,TLS_ECDHE_ECDSA_WITH_CHACHA20_POLY1305
         - --upstream=http://127.0.0.1:8082/
         image: registry.lan/kube-state-metrics-kube-rbac-proxy:v0.14.0
-        imagePullPolicy: Always
+        imagePullPolicy: IfNotPresent
         name: kube-rbac-proxy-self
         ports:
         - containerPort: 9443
