--- a/apps/base/stream-jellyfin/deploy/statefulSet.yaml
+++ b/apps/base/stream-jellyfin/deploy/statefulSet.yaml
@@ -18,7 +18,7 @@ spec:
       initContainers:
       - name: create-folders
         image: "registry.lan/jellyfin-busybox:1.36.0"
-        imagePullPolicy: Always
+        imagePullPolicy: IfNotPresent
         command:
           - "sh"
           - "-c"
@@ -30,7 +30,7 @@ spec:
           mountPath: /jellyfin
       - name: inject-conf
         image: "registry.lan/jellyfin-conf-injection:3.11.1-alpine3.17"
-        imagePullPolicy: Always
+        imagePullPolicy: IfNotPresent
         volumeMounts:
         - name: jellyfin-inject-config
           mountPath: /config-source
@@ -39,7 +39,7 @@ spec:
           subPath: config
       - name: inject-certificate
         image: "registry.lan/jellyfin-conf-injection:3.11.1-alpine3.17"
-        imagePullPolicy: Always
+        imagePullPolicy: IfNotPresent
         command:
           - "sh"
           - "-c"
