--- a/apps/base/tool-paperless/deploy/paperless/statefulSet.yaml
+++ b/apps/base/tool-paperless/deploy/paperless/statefulSet.yaml
@@ -18,7 +18,7 @@ spec:
       initContainers:
       - name: create-folders
         image: "registry.lan/paperless-busybox:1.36.0"
-        imagePullPolicy: Always
+        imagePullPolicy: IfNotPresent
         command:
           - "sh"
           - "-c"
@@ -31,7 +31,7 @@ spec:
       containers:
       - name: paperless
         image: "registry.lan/paperless-ngx:1.13.0-custom"
-        imagePullPolicy: Always
+        imagePullPolicy: IfNotPresent
         envFrom:
         - secretRef:
             name: paperless-env
