--- a/apps/base/tool-paperless/deploy/redis/statefulSet.yaml
+++ b/apps/base/tool-paperless/deploy/redis/statefulSet.yaml
@@ -18,7 +18,7 @@ spec:
       initContainers:
       - name: create-data-dir
         image: "registry.lan/paperless-busybox:1.36.0"
-        imagePullPolicy: Always
+        imagePullPolicy: IfNotPresent
         command:
           - "sh"
           - "-c"
@@ -33,7 +33,7 @@ spec:
       containers:
       - name: redis
         image: "registry.lan/paperless-redis:7.0.10-alpine3.17"
-        imagePullPolicy: Always
+        imagePullPolicy: IfNotPresent
         command:
         - redis-server
         - /usr/local/etc/redis/redis.conf
